Fixes #37 Overlapping Card Bug and improves card ui

--- a/static/main.css
+++ b/static/main.css
@@ -43,7 +43,11 @@
 	background: inherit;
 }
 
-.card-last-transactions {
+.card-last-transactions table {
+	width: 100%;
+}
+
+.mdl-cell {
 	min-width: 25em;
 }
 
@@ -51,6 +55,8 @@
 	background: rgb(0, 188, 212);
 }
 
-.card-last-transactions table {
-	width: 100%;
+.mdl-card {
+	max-width: 100%;
+	width: 400px;
 }
+
